refactor: LogService의 saveLogMapsToFile() 메서드의 가독성 개선을 위해 메서드 추출